<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.6">
  <POU Name="SORTER_PROG" Id="{7d3e32e0-a112-4fce-b916-38fc5ef65b77}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM SORTER_PROG
VAR
	T1: TON;
	
	T2: TON;
	Q: BOOL;
	OUT1: BOOL;
	AR: R_TRIG;
	LOTBOX_STAT: BOOL;
	RTRIG_1: F_TRIG;
	RTRIG_2: F_TRIG;
	RTRIG_3: F_TRIG;
	RTRIG_4: F_TRIG;
	QUEUE_INDEX_1: INT;
	QUEUE_INDEX_2: INT;
	QUEUE_INDEX_3: INT;
	QUEUE_INDEX_4: INT;
	IC_CASE: INT;
	TMR1: TON;
	TMR2: TON;
	I_STOPPER_TRANSFER_A: INT;
	TMR3: TON;
	TMR4: TON;
	TMR5: TON;
	TMR6: TON;
	TMR7: TON;
	TMR8: TON;
	TMR9: TON;
	TMR10: TON;
	TMR11: TON;
	TMR12: TON;
	TMR14: TON;
	COUNTER_1: CTU;
	RESET_COUNTER: BOOL;
	COUNTER_2: CTU;
END_VAR

VAR PERSISTENT
	AR_TRIG: R_TRIG;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[
//INDICATOR LOTBOX
SORTER_VAR.O_LOT_BOX_INDICATOR_1:= NOT SORTER_VAR.I_LOTBOX_DETECT_1;
SORTER_VAR.O_LOT_BOX_INDICATOR_2:= NOT SORTER_VAR.I_LOTBOX_DETECT_2;
SORTER_VAR.O_LOT_BOX_INDICATOR_3:= NOT SORTER_VAR.I_LOTBOX_DETECT_3;
SORTER_VAR.O_LOT_BOX_INDICATOR_4:= NOT SORTER_VAR.I_LOTBOX_DETECT_4;

IF NOT SORTER_VAR.I_LOTBOX_DETECT_1 OR NOT SORTER_VAR.I_LOTBOX_DETECT_2 OR NOT SORTER_VAR.I_LOTBOX_DETECT_3 OR NOT SORTER_VAR.I_LOTBOX_DETECT_4 THEN
	SORTER_VAR.O_TOWER_LAMP_YELLOW :=TRUE;
END_IF 


IF FLAG_VAR.ALLOW_EXECUTE_LOAD_LASER THEN 
	IF SORTER_VAR.I_CASE=100 THEN
		SORTER_VAR.I_CASE:=0;
		IC_CASE:=0;	
		END_IF			
	LOAD_LASER();
END_IF
IF FLAG_VAR.ALLOW_EXECUTE_RETURN_LASER THEN 
	IF SORTER_VAR.I_CASE=100 THEN
		SORTER_VAR.I_CASE:=0;
		IC_CASE:=0;
	END_IF	
	RETURN_LASER();	
END_IF

(*
TMR4(IN:=SORTER_VAR.I_LASER_TRANSFER_AT_FRONT_B,PT:= T#2S);
TMR5(IN:=SORTER_VAR.I_STOPPER_TRANSFER_ON_B,PT:=T#2S);
TMR6(IN:=INPUT_G6_VAR.O_G6_SELECT_LASER_B,PT:=T#10S);

SORTER_VAR.O_STOPPER_TRANSFER_B:=TMR4.Q;
INPUT_G6_VAR.O_G6_SELECT_LASER_B:=TMR5.Q;
*)

//END_IF
//LOTBOX_STAT := SORTER_VAR.I_LOTBOX_DETECT_1 + SORTER_VAR.I_LOTBOX_DETECT_2 + SORTER_VAR.I_LOTBOX_DETECT_3 + SORTER_VAR.I_LOTBOX_DETECT_4 


//INPUT_G6_VAR.I_G6_HOME:=POWER_CONTROL.O_PWR_CTRL_ROBOT_G6;
//INDEXING1_VAR.I_INDEXING_HOME := POWER_CONTROL.O_PWR_CTRL_INDEXING_1;

RTRIG_1(CLK :=SORTER_VAR.I_LOTBOX_DETECT_1);
RTRIG_2(CLK :=SORTER_VAR.I_LOTBOX_DETECT_2);
RTRIG_3(CLK :=SORTER_VAR.I_LOTBOX_DETECT_3);
RTRIG_4(CLK :=SORTER_VAR.I_LOTBOX_DETECT_4);
(*
IF RTRIG_1.Q THEN
	IF QUEUE_INDEX_1 =0  THEN
		QUEUE_INDEX_1 :=1;
	ELSIF QUEUE_INDEX_2 =0 THEN
		QUEUE_INDEX_2 :=1;
	ELSIF QUEUE_INDEX_3 =0 THEN
		QUEUE_INDEX_3 :=1;
	ELSIF QUEUE_INDEX_4 =0 THEN
		QUEUE_INDEX_4 :=1;
	END_IF	
	SORTER_VAR.O_LOTBOX_CLAMP_ON_1:=TRUE;
	SORTER_VAR.O_LOTBOX_CLAMP_OFF_1:=FALSE;
ELSIF RTRIG_2.Q THEN
	IF QUEUE_INDEX_1 =0  THEN
		QUEUE_INDEX_1 :=2;
	ELSIF QUEUE_INDEX_2 =0 THEN
		QUEUE_INDEX_2 :=2;
	ELSIF QUEUE_INDEX_3 =0 THEN
		QUEUE_INDEX_3 :=2;
	ELSIF QUEUE_INDEX_4 =0 THEN
		QUEUE_INDEX_4 :=2;
	END_IF
	SORTER_VAR.O_LOTBOX_CLAMP_ON_2:=TRUE;
	SORTER_VAR.O_LOTBOX_CLAMP_OFF_2:=FALSE;
ELSIF RTRIG_3.Q THEN
	IF QUEUE_INDEX_1 =0  THEN
		QUEUE_INDEX_1 :=3;
	ELSIF QUEUE_INDEX_2 =0 THEN
		QUEUE_INDEX_2 :=3;
	ELSIF QUEUE_INDEX_3 =0 THEN
		QUEUE_INDEX_3 :=3;
	ELSIF QUEUE_INDEX_4 =0 THEN
		QUEUE_INDEX_4 :=3;
	END_IF	
	SORTER_VAR.O_LOTBOX_CLAMP_ON_3:=TRUE;
	SORTER_VAR.O_LOTBOX_CLAMP_OFF_3:=FALSE;
ELSIF RTRIG_4.Q THEN
	IF QUEUE_INDEX_1 =0  THEN
		QUEUE_INDEX_1 :=4;
	ELSIF QUEUE_INDEX_2 =0 THEN
		QUEUE_INDEX_2 :=4;
	ELSIF QUEUE_INDEX_3 =0 THEN
		QUEUE_INDEX_3 :=4;
	ELSIF QUEUE_INDEX_4 =0 THEN
		QUEUE_INDEX_4 :=4;
	END_IF	
	SORTER_VAR.O_LOTBOX_CLAMP_ON_4:=TRUE;
	SORTER_VAR.O_LOTBOX_CLAMP_OFF_4:=FALSE;	
END_IF

IF NOT SORTER_VAR.I_LOTBOX_DETECT_1 THEN
	QUEUE_INDEX_1 :=0;
END_IF
IF NOT SORTER_VAR.I_LOTBOX_DETECT_2 THEN
	QUEUE_INDEX_2 :=0;
END_IF
IF NOT SORTER_VAR.I_LOTBOX_DETECT_3 THEN
	QUEUE_INDEX_3 :=0;
END_IF
IF NOT SORTER_VAR.I_LOTBOX_DETECT_4 THEN
	QUEUE_INDEX_4 :=0;
END_IF

*)	
(* 

SORTER_VAR.O_STOPPER_TRANSFER_A:=TMR11.Q ;
SORTER_VAR.O_STOPPER_TRANSFER_B:=TMR12.Q ;

TMR14(IN:=INPUT_G6_VAR.I_G6_END_LASER,PT:=T#10S);
IF NOT TMR14.Q AND INPUT_G6_VAR.I_G6_END_LASER THEN
	TMR11(IN:=FALSE);
	TMR12(IN:=FALSE);
ELSE
	TMR11(IN:=SORTER_VAR.I_LASER_TRANSFER_AT_FRONT_A,PT:=T#2S);	
	TMR12(IN:=SORTER_VAR.I_LASER_TRANSFER_AT_FRONT_B,PT:=T#2S);

END_IF
 

 IF INPUT_G6_VAR.I_G6_END_LASER AND NOT SORTER_VAR.ACTIVE_PROGRAM_CHANGE THEN
	SORTER_VAR.ACTIVE_PROGRAM:=SORTER_VAR.ACTIVE_PROGRAM+1;
	IF SORTER_VAR.ACTIVE_PROGRAM=3 THEN
		SORTER_VAR.ACTIVE_PROGRAM:=1;
	END_IF
	SORTER_VAR.ACTIVE_PROGRAM_CHANGE:=TRUE;
 END_IF

 COUNTER_1(CU:=INPUT_G6_VAR.I_G6_END_CYCLE,RESET:=INPUT_G6_VAR.O_G6_START,PV:=14);
IF COUNTER_1.CV =1 THEN
	SORTER_VAR.ACTIVE_PROGRAM_CHANGE:=FALSE;
END_IF
 
*)]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>